# siginfo

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: create_release.yaml  test_python_versions.yaml
docs/: Makefile  conf.py  index.rst  locals.rst  siginfopdb.rst  siginfosingle.rst  utils.rst
docs/source/: conf.py  index.rst  siginfobasic.rst
siginfo/: README.md  __init__.py  localclass.py  siginfoclass.py  utils.py
tests/: test_locals.py  test_siginfo.py  test_utils.py
